--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,8 @@
 
 <h2>Eat-A-(Vegan)Burger!</h2>
 
+
+<h2>Order Up!</h2>
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
@@ -10,8 +12,8 @@
   {{/each}}
 </ul>
 
-<h2>Order Up!</h2>
 
+<h2>Delicious Burgers You've Enjoyed</h2>
 <ul>
   {{#each burgers}}
     {{#if devoured}}
