--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,34 +1,40 @@
 
 
-<h2>Eat-A-(Vegan)Burger!</h2>
+<div class="container">
+  <div class="jumbotron"><h1>Eat-A-(Vegan)Burger!</h1></div>
+    <div class="row">
+      <div class="col-4">
+        <h2>Order Up!</h2>
+        <ul class="list-unstyled">
+          {{#each burgers}}
+            {{#unless devoured}}
+              {{> burgers/burger-block devoured=false}}
+            {{/unless}}
+          {{/each}}
+        </ul>
+      </div>
+      <div class="col-4">
+        <h2>Build Your Burger</h2>
+        <form class="create-form">
 
+          <div class="form-group">
+            <label for="ca">Order:</label>
+            <input type="text" id="ca" name="name">
+          </div>
 
-<h2>Order Up!</h2>
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-
-<h2>Delicious Burgers You've Enjoyed</h2>
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=true}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Build Your Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Order:</label>
-    <input type="text" id="ca" name="name">
+          <button type="submit">Order Burger</button>
+        </form>
+      </div>
+      <div class="col-4">
+        <h2>Delicious Burgers You've Enjoyed</h2>
+        <ul class="list-unstyled">
+          {{#each burgers}}
+            {{#if devoured}}
+              {{> burgers/burger-block devoured=true}}
+            {{/if}}
+          {{/each}}
+        </ul>
+      </div>
   </div>
+</div>
 
-  <button type="submit">Order Burger</button>
-</form>
