--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,14 @@
 
 
 <div class="container">
-  <div class="jumbotron"><h1>Eat-A-(Vegan)Burger!</h1></div>
+<div class="wrapper">
+    <header><img src="https://www.mercurynews.com/wp-content/uploads/2019/01/OCR-L-CARLSJR-0103.jpg?w=481">
+    <h1>Eat-A-(Vegan)Burger!</h1></header>
+</div>
+<div class="wrapper">
+ </div>
     <div class="row">
-      <div class="col-4">
+      <div class="col-md-4">
         <h2>Order Up!</h2>
         <ul class="list-unstyled">
           {{#each burgers}}
@@ -13,19 +18,22 @@
           {{/each}}
         </ul>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <h2>Build Your Burger</h2>
         <form class="create-form">
-
-          <div class="form-group">
-            <label for="ca">Order:</label>
-            <input type="text" id="ca" name="name">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="form-group">
+                <label for="ca">Order:</label>
+                <input type="text" id="ca" name="name">
+              </div>
+            </div>
           </div>
 
           <button type="submit">Order Burger</button>
         </form>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <h2>Delicious Burgers You've Enjoyed</h2>
         <ul class="list-unstyled">
           {{#each burgers}}
@@ -35,6 +43,7 @@
           {{/each}}
         </ul>
       </div>
+  </div>
   </div>
 </div>
 
